# qsharp-runtime

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  Cargo.toml  ISSUE_TEMPLATE.md  Microsoft.Quantum.Development.Kit.nuspec  NOTICE.txt  NuGet.Config  README.md  Simulation.sln  bootstrap.cmd  bootstrap.ps1  bootstrap.sh  build.ps1  cspell.json  global.json  omnisharp.json  prerequisites.ps1  rust-toolchain
src/Qir/Runtime/: .gitignore  CMakeLists.txt  Microsoft.Quantum.Experimental.Qir.Runtime.nuspec  Microsoft.Quantum.Qir.Runtime.Experimental.nuspec  Microsoft.Quantum.Qir.Runtime.nuspec  README.md  build-qir-runtime.ps1  build-qir-stdlib.ps1  prerequisites.ps1  test-qir-runtime.ps1  test-qir-stdlib.ps1
src/Qir/Runtime/.cargo/: config.toml
src/Qir/Runtime/backend/: Cargo.toml
src/Qir/Runtime/cmake/: LlvmIr.cmake  qir_cmake_include.cmake  unit_test_include.cmake
src/Qir/Runtime/lib/: CMakeLists.txt  README.md
src/Qir/Runtime/public/: CoreTypes.hpp  OutputStream.hpp  QSharpSimApi_I.hpp  QirContext.hpp  QirOutputHandling.hpp  QirRuntime.hpp  QirRuntimeApi_I.hpp  QirTypes.hpp  QubitManager.hpp  README.md  SimFactory.hpp  TracerTypes.hpp
src/Qir/Runtime/samples/: CMakeLists.txt
src/Qir/Runtime/stdlib/: Cargo.toml  build.rs
src/Qir/Runtime/unittests/: CMakeLists.txt  QirOutputHandlingTests.cpp  QirRuntimeTests.cpp  QubitManagerTests.cpp  ToffoliTests.cpp  TracerTests.cpp  driver.cpp
src/Qir/Samples/: CMakeLists.txt  build-qir-samples.ps1  test-qir-samples.ps1
src/Qir/Samples/StandaloneInputReference/: .clang-tidy  CMakeLists.txt  qir-driver.cpp  readme.md
src/Qir/Tests/: .clang-tidy  CMakeLists.txt  CMakeSettings.json  TestUtils.cpp  TestUtils.hpp  build-qir-tests.ps1  test-qir-tests.ps1
src/Qir/Tests/FullstateSimulator/: CMakeLists.txt  FullstateSimulatorTests.cpp
src/Qir/Tests/OpenSystemsSimulator/: CMakeLists.txt  OpenSystemsSimulatorTests.cpp
src/Qir/Tests/QIR-dynamic/: CMakeLists.txt  qir-driver.cpp
src/Qir/Tests/QIR-static/: CMakeLists.txt  qir-driver.cpp  qir-test-conditionals.cpp  qir-test-math.cpp  qir-test-noqsharp.ll  qir-test-other.cpp  qir-test-ouput.cpp  qir-test-strings.cpp
src/Qir/Tests/QIR-tracer/: CMakeLists.txt  qir-tracer-driver.cpp  tracer-config.cpp  tracer-config.hpp
src/Qir/Tests/Tools/: QirDriverGeneratorTests.cs  QirExecutableGeneratorTests.cs  QirExecutableTests.cs  Tests.Microsoft.Quantum.Qir.Runtime.Tools.csproj
src/Qir/Tests/Type1Simulator/: CMakeLists.txt  FullstateSimulatorTests.cpp
src/Qir/Tests/qpe/: .gitignore  1e_0.181287518_-0.181287518.json  CMakeLists.txt  IBMQ_qis.cpp  IBMQ_qis.hpp  JW.hpp  JWData_o.json  JWData_out_pretty02.json  JW_QIR.cpp  JW_QIR.hpp  JW_json.cpp  JW_json.hpp  QirUtils.hpp  README.md  a  build.ps1  est-energy.ll  main.cpp  run.ps1
src/Qir/microsoft-quantum-qir-runtime-sys/: Cargo.toml  build.rs
src/Qir/microsoft-quantum-qir-runtime-sys/src/: foundation.rs  lib.rs  qir_libloading.rs  runtime.rs
src/Qir/riqir/: Cargo.toml  build-qir-runtime.ps1  build-qir-stdlib.ps1  test-qir-runtime.ps1  test-qir-stdlib.ps1
src/Qir/riqir-test/FullstateSimulator/: CMakeLists.txt
src/Qir/riqir-test/QIR-dynamic/: CMakeLists.txt
src/Qir/riqir-test/QIR-static/: CMakeLists.txt
src/Qir/riqir/runtime/: Cargo.toml
src/Qir/riqir/sim/: Cargo.toml
src/Qir/riqir/src/: callables.rs  conditionals.rs  lib.rs  output_recording.rs  range_support.rs  result_bool.rs  strings.rs
src/QirRuntime/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build-qir-runtime.ps1  build.py  generateqir.py  install-prereqs.ps1  prerequisites.ps1  run.sh  test-qir-runtime.ps1  test.py
src/QirRuntime/cmake/: LLVMIRUtil.cmake  LLVMIRUtilInternal.cmake  ProduceIR.cmake  qir_cmake_include.cmake  unit_test_include.cmake
src/QirRuntime/experimental/: CMakeLists.txt  CircuitToJsonPrinter.cpp  CircuitToJsonPrinterTests.cpp  ExperimentalSimFactory.hpp  ITranslator.hpp  IntervalsColoring.hpp  IntervalsColoringTests.cpp  IonqTranslator.cpp  IonqTranslatorTests.cpp  LockstepSimulator.cpp  LockstepSimulatorTests.cpp  QubitInterferences.cpp  QubitInterferences.hpp  QubitInterferencesTests.cpp  TracingSimulator.cpp  TracingSimulatorTests.cpp
src/QirRuntime/lib/: CMakeLists.txt
src/QirRuntime/lib/Core/: CMakeLists.txt  QubitAllocationPolicies.cpp
src/QirRuntime/lib/QAPI/: CMakeLists.txt  QAPI.cpp
src/QirRuntime/lib/QIR/: CMakeLists.txt  __dummy.cpp  __quantum__qis.hpp  __quantum__rt.hpp  allocationsTracker.cpp  allocationsTracker.hpp  arrays.cpp  bridge-qis.ll  bridge-rt.ll  callables.cpp  conditionals.cpp  context.cpp  context.hpp  delegated.cpp  (+11 more)
src/QirRuntime/public/: BitStates.hpp  ChunkedStore.hpp  CoreTypes.hpp  IIdAllocationPolicy.hpp  IQuantumApi.hpp  QAPI.hpp  QSharpSimApi_I.hpp  QirContext.hpp  QirRuntime.hpp  QirTypes.hpp  QuantumApiBase.hpp  QuantumApi_I.hpp  QubitAllocationPolicies.hpp  ResourceStatistics.hpp  SimFactory.hpp  TracerTypes.hpp
src/QirRuntime/samples/: CMakeLists.txt
src/QirRuntime/test/: CMakeLists.txt  SimulatorStub.hpp
src/Simulation/Native/: .clang-format  .gitignore  Big.pdn  CMakeCache.txt  CMakeLists.txt  Makefile  Ubu.csv  WSL.csv  Win.csv  argmaxnrm2_test  bititerator_test  bitops_test  bootstrap.cmd  bootstrap.sh  build-and-test-simulator.ps1  build-native-simulator.ps1  capi_test  cpuid_test  dbw_test  diagmatrix_test  doCopy.cmd  doCopy.ps1  factory_test  foo.csv  install-prereqs.ps1  local_test  openmp_test  parseLog.py  prerequisites.ps1  sched0.txt  sched2.txt  stats.xlsx  test-native-simulator.ps1  tinymatrix_test  w15b_15.csv  w15b_26.csv
src/Simulation/NativeSparseSimulator/: CMakeLists.txt  SparseSimulator.h  SparseSimulatorTests.cpp  TestHelpers.cpp  TestHelpers.hpp  basic_quantum_state.hpp  build.ps1  capi.cpp  capi.hpp  factory.cpp  factory.hpp  gates.h  quantum_state.hpp  test.ps1  types.h
src/Simulation/qdk_sim_rs/: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.template  README.md  build-qdk-sim-rs.ps1  build.rs  cspell.json  inject-version.csx  prerequisites.ps1  rust-toolchain.toml  setup.py  test-qdk-sim-rs.ps1
(+2695 files in other folders)
