[package]
name = "qir-runtime"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.3", default-features = false }
rand = "0.8.5"

rustc-hash = {version = "1.1.0", optional = true }
num-complex = {version = "0.4", optional = true }
num-traits = {version = "0.2.14", optional = true }
rayon = {version = "1.5.1", optional = true }
ndarray = { version = "0.15.4", features = [ "rayon", "matrixmultiply-threading" ], optional = true }
mimalloc = { version = "0.1.27", default-features = false, optional = true }
lazy_static = {version = "1.4.0", optional = true }
bitvec = {version = "1.0.0", optional = true }

[lib]
crate-type = ["cdylib","rlib"]

[features]
default = ["sim"]
sim = ["rustc-hash", "num-complex", "num-traits", "rayon", "ndarray", "lazy_static", "bitvec"]